--- a/liziqi001.github.io/_config.yml
+++ b/liziqi001.github.io/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: liziqi's 博客
 subtitle: 发现新知~预见未来
-description: sdfwr34fdfdg42dfs2
+description: 一个前端、两点笔记、三生感悟
 author: liziqi
 language: zh-Hans
 timezone:
